--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -4742,3 +4742,61 @@
  PBC_modernize_our_naval_bombers_desc:0 "Naval bombers will secure our dominance at sea and in the air at the same time."
  PBC_design_coastal_ships:0 "Design Coastal Ships"
  PBC_design_coastal_ships_desc:0 "With better technology and improved efficiency, we can quickly build up a coastal defense in the event of war."
+
+ #Central America
+ central_industrial_effort:0 "The [Root.GetAdjective] Economy"
+ central_nationalise_land:0 "Nationalise Privatre Land"
+ central_nationalise_land_desc:0 "central_nationalise_land_desc"
+ central_concession_fruit_company:0 "Concession to the Fruit Companies"
+ central_depose_companies:0 "Depose the Fruit Companies"
+ central_distribute_unused_land:0 "Distribute Unused Land"
+ central_buy_industrial_centers:0 "Buy Industrial Centers"
+ central_invest_munitions_plant:0 "Invest in the Arms Industry"
+ central_deal_with_fruit_companies:0 "A Deal with the Devil"
+ central_deal_with_corruption:0 "Deal with Corruption"
+ central_industrial_take_over:0 "Industrial Takeover"
+ central_industrial_independence:0 "Industrial Independence"
+ central_expand_railways:0 "Expand Railways"
+ central_modern_industry:0 "Modern Industry"
+ central_concessions_to_americans:0 "Concessions to the Americans"
+ central_invest_small_businesses:0 "Invest in Small Businesses"
+ central_extend_healthcare_system:0 "Expand the Healthcare System"
+ central_create_industrial_park:0 "Create an Industrial Park"
+ central_create_industrial_park:0 "Create an Industrial Park"
+ central_curtial_influence:0 "Curtail the Fruit Companies' Influence"
+ central_cooperate_companies:0 "Cooperate with the Companies"
+ central_repress_unions:0 "Repress the Unions"
+ central_UFC_investment:0 "UFC Investment"
+ central_accept_bribes:0 "Accept Bribes"
+ central_UMC_in_government:0 "UFC in the Government"
+ central_supress_media:0 "Supress the Media"
+ central_subdue_peasants:0 "Subdue the Peasantry"
+ central_UFC_puppet:0 ""
+ central_banana_economy:0 "Banana Economy"
+ central_education_budget:0 "Increase Education Budget"
+ central_army_effort:0 "[Root.GetAdjective] Army"
+ central_reform_army:0 "Reform the Army"
+ central_disolve_the_army:0 "central_disband_army"
+ central_disband_army:0 "Disband the Army"
+ central_purchase_old_equipment:0 "Purchase Old Equipment"
+ central_special_forces:0 "[Root.GetAdjective] Special Forces"
+ central_acquire_old_cannons:0 "Acquire Old Cannons"
+ central_develop_guns:0 "Weapon Production"
+ central_artillery_production:0 "Artillery Production"
+ central_improve_high_command:0 "Improve the High Command"
+ central_military_academies:0 "Create Military Academies"
+ central_employ_graduates:0 "Employ New Graduates"
+ central_acquire_new_equipment:0 "Acquire New Equipment"
+ create_updated_tactics:0 "Updated Tactics"
+ central_purchase_outdated_tanks:0 "Purchase Outdated Tanks"
+ central_motorize_army:0 "Motorize the Army"
+ central_disarmed_nation:0 "Disarmed Nation"
+ central_create_guard:0 "Create the [Root.GetAdjective] Guard"
+ central_true_pacifism:0 "True Pacifism"
+ central_diplomatic_effort:0 "Diplomatic Effort"
+ central_fund_police:0 "Fund the Police"
+ central_non_agression_pact:0 "The Treaty of [Root.Capital.GetName]"
+ central_reserve_forces:0 "Create the Reserve Forces"
+ central_train_guard:0 "Train the Guard"
+ central_public_forces:0 "Fuerza Publica de [Root.GetName]"
+ central_international_support:0 "International Support"
