--- a/localisation/parties_l_spanish.yml
+++ b/localisation/parties_l_spanish.yml
@@ -432,8 +432,8 @@
  COS_democratic_party_long:0 "Partido Republicano"
  COS_communism_party:0 "BOC"
  COS_communism_party_long:0 "Bloque de Obreros y Campesinos"
- COS_fascism_party:0 "PNCR"
- COS_fascism_party_long:0 "Partido Nacionalsocialista de Costa Rica"
+ COS_fascism_party:0 "PN"
+ COS_fascism_party_long:0 "Partido Nacionalista"
  COS_neutrality_party:0 "PR"
  COS_neutrality_party_long:0 "Partido Republicano"
  ELS_fascism_party:0 "Pro-Patria"
