--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -310,12 +310,12 @@
  STATE_309:0 "Suriname"
  STATE_310:0 "French Guiana"
  STATE_311:1 "British Honduras"
- STATE_312:0 "Honduras"
+ STATE_312:0 "Tegucigalpa"
  STATE_313:0 "Guatemala"
  STATE_314:0 "El Salvador"
  STATE_315:0 "Cuba"
  STATE_316:0 "Costa Rica"
- STATE_317:0 "Nicaragua"
+ STATE_317:0 "Managua"
  STATE_318:0 "Haiti"
  STATE_319:0 "Dominican Republic"
  STATE_320:0 "French India"
