--- a/localisation/tooltips_l_english.yml
+++ b/localisation/tooltips_l_english.yml
@@ -1,2 +1,10 @@
 ﻿l_english:
   URG_available_ancap:0 "§YANCAP§! will be available as an §YIndustrial Company§!"
+  central_usa_depose_companies_tt:0 "§RThis will anger the§! §GUnited States§! §Rand can lead to an intervention§!"
+  central_communist_depose_companies_tt:0 "§RIf this focus isn't completed within 2 years of becoming communist, a civil war will trigger§!"
+  central_UFC_investment_tt:0 "This will unlock the '§YUFC Investment§!' decisions, allowing you to §Gexpand§! either your §Yindustry§!, §Ymilitary§! or §Yinfrastructure§!"
+  central_cooperate_warning_tt:0 "§RBecoming Communist will make you lose all ideas from this path!§!"
+  central_american_intervention_tt:0 "§RThe UFC will presure the US government to intervene in [Root.GetName]!§!"
+  central_concessions_to_americans_100_tt:0 "The concessions to the Americans have been paid"
+  central_american_concession_tt_25:0 "We will pay §G25%§! of the requested compensation"
+  central_american_concession_tt_50:0 "We will pay §G50%§! of the requested compensation"  
