--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -1531,25 +1531,6 @@
  TAN_i_p_rugalinskij:0 "I.P. Rugalinskij"
  TAN_grinchik:0 "Grinchik"
  TAN_v_i_kulikovskij:0 "V.I. Kulikovskij"
- VEN_generic_fascist_demagogue:0 "Adolfo Melgarejo"
- VEN_generic_democratic_reformer:0 "Romulo Betancourt"
- VEN_generic_communist_revolutionary:0 "Manuel Diaz Rodriguez"
- VEN_manuel_diaz_rodriguez:0 "Manuel Diaz Rodriguez"
- VEN_romulo_gallegos_freire:0 "Romulo Gallegos Freire"
- VEN_isidoro_ruiz_tuerro:0 "Isidoro Ruiz Tuerro"
- VEN_isaias_medina_angarita:0 "Isaias Medina Angarita"
- VEN_tomas_contreras_villalobos:0 "Tomas Contreras Villalobos"
- VEN_david_lopez_henriques:0 "David Lopez Henriques"
- VEN_miguel_diaz_fraile:0 "Miguel Díaz Fraile"
- VEN_humberto_santabria_villa:0 "Humberto Santabria Villa"
- VEN_carlos_molina_talavayo:0 "Carlos Molina Talavayo"
- VEN_victor_sanchez_croes:0 "Victor Sanchez Croes"
- VEN_carlos_delgado_chalbaud:0 "Carlos Delgado Chalbaud"
- VEN_roberto_de_luca_varesano:0 "Roberto de Luca Varesano"
- VEN_carlos_ramos_diaz:0 "Carlos Ramos Díaz"
- VEN_carlos_garcia_mendoza:0 "Carlos Garcia Mendoza"
- VEN_antonio_casas_gonzalez:0 "Antonio Casas Gonzalez"
- VEN_jose_polares_pavon:0 "José Polares Pavon"
  CRO_generic_fascist_demagogue:0 "Milan Budak"
  CRO_generic_democratic_reformer:0 "Vladko Macek"
  CRO_generic_communist_revolutionary:0 "Janko Mohorovicic"
@@ -3170,6 +3151,28 @@
  PBC_war_of_independence:0 "Our War of Independence"
  PBC_war_of_independence_desc:0 "These damn bastards want us dead yet again, they don't want our union to work. They are egotistical and scared that we will be succesful, and to their unpleasent surprise, WE WILL! No matter how many of our men we will lose, we have to win this war. Our predecessors tried it once and failed, but this time we will succeed!"
  
+ # Venezuela
+
+ VEN_generic_fascist_demagogue:0 "Adolfo Melgarejo"
+ VEN_generic_democratic_reformer:0 "Romulo Betancourt"
+ VEN_mariano_picon_salas:0 "Mariano Picón Salas"
+ VEN_isaias_medina_angarita:0 "Isaias Medina Angarita"
+ VEN_carlos_delgado:0 "Carlos Delgado"
+ VEN_rodolfo_quintero:0 "Rodolfo Quintero"
+ VEN_arnold_margerie:0 "Arnold Margerie"
+ VEN_tomas_contreras_villalobos:0 "Tomas Contreras Villalobos"
+ VEN_david_lopez_henriques:0 "David Lopez Henriques"
+ VEN_miguel_diaz_fraile:0 "Miguel Díaz Fraile"
+ VEN_humberto_santabria_villa:0 "Humberto Santabria Villa"
+ VEN_carlos_molina_talavayo:0 "Carlos Molina Talavayo"
+ VEN_victor_sanchez_croes:0 "Victor Sanchez Croes"
+ VEN_carlos_delgado_chalbaud:0 "Carlos Delgado Chalbaud"
+ VEN_roberto_de_luca_varesano:0 "Roberto de Luca Varesano"
+ VEN_carlos_ramos_diaz:0 "Carlos Ramos Díaz"
+ VEN_carlos_garcia_mendoza:0 "Carlos Garcia Mendoza"
+ VEN_antonio_casas_gonzalez:0 "Antonio Casas Gonzalez"
+ VEN_jose_polares_pavon:0 "José Polares Pavon"
+
  # Nicaragua
  nic_rebellious_army:0 "Rebellious Army"
 
