--- a/localisation/lar_decisions_l_english.yml
+++ b/localisation/lar_decisions_l_english.yml
@@ -912,7 +912,13 @@
  central_communist_revolt_category:0 "Communist Revolt"
  central_communist_revolt:0 "Communist Revolt"
  central_american_intervention_category:0 "American Intervention"
- central_american_intervention_category_desc:0 "Following our decision to kick the fruit companies out of the country, the United States, feeling that their trade is being threatened, has begun asking for compensation due to the profit loss these companies will face, and the US too as a result. \n\nCurrent percentage of the requested compensation we have payed back:  [?central_american_concession_variable|G0]§G%§!"
+ central_american_intervention_category_desc:0 "Following our decision to kick the fruit companies out of the country, the United States, feeling that their trade is being threatened, has begun asking for compensation due to the profit loss these companies will face, and the US too as a result. \n\n[AmericanInterventionCentralAmericaVariable]"
+ PAN_AMERICAN_INTERVENTION_VARIABLE:0 "Current percentage of the requested compensation we have payed back:  [?PAN_central_american_concession_variable|G0]§G%§!"
+ COS_AMERICAN_INTERVENTION_VARIABLE:0 "Current percentage of the requested compensation we have payed back:  [?COS_central_american_concession_variable|G0]§G%§!"
+ NIC_AMERICAN_INTERVENTION_VARIABLE:0 "Current percentage of the requested compensation we have payed back:  [?NIC_central_american_concession_variable|G0]§G%§!"
+ HON_AMERICAN_INTERVENTION_VARIABLE:0 "Current percentage of the requested compensation we have payed back:  [?HON_central_american_concession_variable|G0]§G%§!"
+ ELS_AMERICAN_INTERVENTION_VARIABLE:0 "Current percentage of the requested compensation we have payed back:  [?ELS_central_american_concession_variable|G0]§G%§!"
+ GUA_AMERICAN_INTERVENTION_VARIABLE:0 "Current percentage of the requested compensation we have payed back:  [?GUA_central_american_concession_variable|G0]§G%§!"
  central_american_intervention:0 "American Intervention"
  central_american_concession_25:0 "Pay back §G25%§! of the compensation"
  central_american_concession_50:0 "Pay back §G50%§! of the compensation" 
