New states for COS and ELS

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -312,9 +312,9 @@
  STATE_311:1 "British Honduras"
  STATE_312:0 "Tegucigalpa"
  STATE_313:0 "Guatemala"
- STATE_314:0 "El Salvador"
+ STATE_314:0 "San Salvador"
  STATE_315:0 "Cuba"
- STATE_316:0 "Costa Rica"
+ STATE_316:0 "San José"
  STATE_317:0 "Managua"
  STATE_318:0 "Haiti"
  STATE_319:0 "Dominican Republic"
@@ -894,3 +894,6 @@
  STATE_893:0 "Colón"
  STATE_894:0 "San Pedro Sula"
  STATE_895:0 "David"
+ STATE_896:0 "Guanacaste"
+ STATE_897:0 "Puntarenas"
+ STATE_898:0 "Northern El Salvador" 
