--- a/localisation/state_names_l_spanish.yml
+++ b/localisation/state_names_l_spanish.yml
@@ -894,4 +894,7 @@
  STATE_893:0 "Colón"
  STATE_894:0 "San Pedro Sula"
  STATE_895:0 "David"
+ STATE_896:0 "Guanacaste"
+ STATE_897:0 "Puntarenas"
+ STATE_898:0 "Norte de El Salvador"  
 
