--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1086,8 +1086,12 @@
  VICTORY_POINTS_14539:0 "Matagalpa"  #14539 - 317
 
  #NUEVOS VP - COSTA RICA
- VICTORY_POINTS_12878:0 "Palmar" #316
- VICTORY_POINTS_13092:0 "Puntarenas" #316
+ VICTORY_POINTS_14557:0 "Golfito" #897
+ VICTORY_POINTS_14558:0 "Limón" #14558 - 316
+ VICTORY_POINTS_13092:0 "Liberia" #13092 - 896
+
+ #NUEVOS VP - EL SALVADOR
+ VICTORY_POINTS_14562:0 "San Miguel"
  
  #NUEVOS VP - PERÚ
  VICTORY_POINTS_14311:0 "San Antonio del Estrecho" #14311 - 887
