--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -610,8 +610,8 @@
  COS_fascism_DEF:0 "Costa Potente"
  COS_democratic:0 "Costa Rica"
  COS_democratic_DEF:0 "Costa Rica"
- COS_neutrality:0 "Reino de la Costa"
- COS_neutrality_DEF:0 "Reino de la Costa"
+ COS_neutrality:0 "Costa Rica"
+ COS_neutrality_DEF:0 "Costa Rica"
  COS_communism:0 "Costa del Pueblo"
  COS_communism_DEF:0 "Costa del Pueblo"
  COS_fascism_ADJ:0 "Costa Rican"
