--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -3183,7 +3183,7 @@
  central_banana_republic_cooperate_desc:0 "This government has begun making concessions to the fruit companies, even if it means sacrificing civil liberties and rights. However, this action has begun stirring the socialist movements, who have begun to openly oppose the government."
  central_banana_republic_cooperate2:0 "Union Supression"
  central_banana_republic_cooperate2_desc:0 "Due to the socialist revolots, this government has deemed necessary to begin prohibiting all types of unions."
- central_banana_republic_i1:0 "Land Nationalisation"
+ central_banana_republic_i1:0 "Enraged Companies"
  central_banana_republic_i1:0 "This government has begun nationalising the lands owned by the private fruit companies. While this move will begin shifting public support in favor of the government, the influencial companies will make everything they can to block any propossals of the government."
  kicking_the_companies:0 "Deposing the Companies"
  kicking_the_companies_desc:0 "The fruit companies are being kicked out of [Root.GetName]. This has gained the government the support of the people but also angered the elites, who are using using bribes and legal loopholes to cause as much problems for the government as possible."
@@ -3193,3 +3193,10 @@
  central_banana_republic_cooperate4_desc:0 "Due to the vast anti-revolutionary reforms of the government, the [Root.GetCommunistParty] has all but failed and gone underground. With no opposition remaining, this government has begun putting all efforts into turning [Root.GetName] into the perfect corporatocracy"
  central_banana_republic_cooperate5:0 "Banana Economy"
  central_banana_republic_cooperate5_desc:0 "This government has turned into a corporatocracy, with most political efforts being to secure the influence and profitability of the fruit companies over the welfare of the people"
+ central_industrial_independence:0 "Independent Industry"
+ central_banana_republic_i2:0 "Large Company Influence"
+ UFC_in_government_idea:0 "UFC in the Government"
+ central_recent_purchase:0 "Recent Industrial Purchase"
+ central_recent_purchase2:0 "Recent Industrial Purchases"
+ central_banana_republic_i3:0 "Decaying Company Influence"
+ central_modern_healthcare:0 "Modernized Healthcare System"
