--- a/localisation/tooltips_l_english.yml
+++ b/localisation/tooltips_l_english.yml
@@ -7,4 +7,6 @@
   central_american_intervention_tt:0 "§RThe UFC will presure the US government to intervene in [Root.GetName]!§!"
   central_concessions_to_americans_100_tt:0 "The concessions to the Americans have been paid"
   central_american_concession_tt_25:0 "We will pay §G25%§! of the requested compensation"
-  central_american_concession_tt_50:0 "We will pay §G50%§! of the requested compensation"  
+  central_american_concession_tt_50:0 "We will pay §G50%§! of the requested compensation" 
+  central_concessions_to_americans_tt:0 "This will unlock the §YConcessions to the Americans§! decisions, allowing you to make concessions to the Americans to avoid an §Rintervention§!" 
+  central_new_generals_tt:0 "After completing this focus, you will gain §G3§! §Ynew generals§!"
