--- a/localisation/traits_l_english.yml
+++ b/localisation/traits_l_english.yml
@@ -26,7 +26,12 @@
  PBC_fascist_tendencies:0 "Fascist Tendencies"
  PBC_democratic_tendencies:0 "Democratic Tendencies"
  COS_intellectual_dictator:0 "Intellectual Dictator"
+ URG_el_guerrillero:0 "El Guerrillero"
  generic_army_connections:0 "Army Connections"
+ generic_physician:0 "Physician"
+ generic_lawyer:0 "Lawyer"
+ generic_judge:0 "Judge"
+ generic_writer:0 "Writer"
  
  
  cc_leader:0 "General"
