--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1090,6 +1090,10 @@
  VICTORY_POINTS_14558:0 "Limón" #14558 - 316
  VICTORY_POINTS_13092:0 "Liberia" #13092 - 896
 
+ #NUEVOS VP - PANAMA
+ VICTORY_POINTS_14566:0 "Santiago"
+ VICTORY_POINTS_10482:0 "La Palma" 
+
  #NUEVOS VP - EL SALVADOR
  VICTORY_POINTS_14562:0 "San Miguel"
  
