--- a/localisation/victory_points_l_spanish.yml
+++ b/localisation/victory_points_l_spanish.yml
@@ -1093,6 +1093,10 @@
  #NUEVOS VP - COSTA RICA
  VICTORY_POINTS_12878:0 "Palmar" #316
  VICTORY_POINTS_13092:0 "Puntarenas" #316
+
+ #NUEVOS VP - PANAMA
+ VICTORY_POINTS_14566:0 "Santiago"
+ VICTORY_POINTS_10482:0 "La Palma"
  
  #NUEVOS VP - PERÚ
  VICTORY_POINTS_14311:0 "San Antonio del Estrecho" #14311 - 887
