Central America WIP

--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -3200,3 +3200,9 @@
  central_recent_purchase2:0 "Recent Industrial Purchases"
  central_banana_republic_i3:0 "Decaying Company Influence"
  central_modern_healthcare:0 "Modernized Healthcare System"
+ central_army_reform:0 "Army Reform"
+ central_artillery_production:0 "Artillery Effort"
+ central_weapon_production:0 "Weapon Effort"
+ central_improve_high_command_idea:0 "Improved High Command"
+ central_motorization_effort:0 "Motorization Effort"
+ central_disbanded_army:0 "Disbanded Army"
