--- a/localisation/ideas_l_spanish.yml
+++ b/localisation/ideas_l_spanish.yml
@@ -3289,3 +3289,9 @@
  central_banana_republic_cooperate5_desc:0 "Este gobierno se ha convertido en una corporatocracia, con la mayoría de los esfuerzos políticos siendo enfocados en asegurar la influencia y rentabilidad de las empresas frutícolas sobre el bienestar de la gente."
  central_industrial_independence:0 "Industria Independiente"
  central_banana_republic_i2:0 "Gran Influencia Empresarial"
+ central_army_reform:0 "Reforma del Ejército"
+ central_artillery_production:0 "Enfoque en Artillería"
+ central_weapon_production:0 "Enfoque en Armas"
+ central_improve_high_command_idea:0 "Alto Comando Mejorado"
+ central_motorization_effort:0 "Enfoque en Vehículos"
+ central_disbanded_army:0 "Ejército Abolido"
