--- a/localisation/equipment_l_spanish.yml
+++ b/localisation/equipment_l_spanish.yml
@@ -3287,14 +3287,14 @@
  URG_medium_tank_aa_equipment_2:0 "M16 Multiple Gun Motor Carriage"
  URG_medium_tank_aa_equipment_2_short:0 "M16 MGMC"
 
- URG_motorized_equipment_1:0 "Dodge WC "Beeps""
+ URG_motorized_equipment_1:0 "Ford F15A"
+ URG_motorized_equipment_1_short:0 "Ford F15A" 
  URG_mechanized_equipment_1:0 "Half-Track Car M2"
  URG_mechanized_equipment_1_short:0 "M2"
  URG_mechanized_equipment_2:0 "Half-Track Personnel Carrier M3"
  URG_mechanized_equipment_2_short:0 "HT M3"
  URG_mechanized_equipment_3:0 "Half-Track Personnel Carrier M5"
  URG_mechanized_equipment_3_short:0 "HF M5" 
- URG_motorized_equipment_1_short:0 "Dodge WC" 
  URG_infantry_equipment_0:0 "Ceska Zbrojovka vz. 24"
  URG_infantry_equipment_0_short:0 "vz .24"
  URG_infantry_equipment_1:0 "M1 Garand"
@@ -3305,8 +3305,8 @@
  URG_infantry_equipment_2_short:0 "Thompson M1"
  URG_gw_armored_car_equipment:0 "M1 Armored Car"
  URG_gw_armored_car_equipment_short:0 "M1"
- URG_armored_car_equipment_1:0 "M3 Scout Car"
- URG_armored_car_equipment_1_short:0 "M3"
+ URG_armored_car_equipment_1:0 "Ford Lynx Scout Car"
+ URG_armored_car_equipment_1_short:0 "Lynx"
  URG_armored_car_equipment_2:0 "M8 Greyhound"
  URG_armored_car_equipment_2_short:0 "M8"
  URG_armored_car_at_equipment:0 "M38 90mm Turret"
