--- a/localisation/equip_air_l_english.yml
+++ b/localisation/equip_air_l_english.yml
@@ -2022,3 +2022,10 @@
  URG_cv_nav_bomber_equipment_2_short:0 "TBF Avenger" 
  URG_cv_fighter_equipment_2:0 "Grumman F6F Hellcat" 
  URG_cv_fighter_equipment_2_short:0 "F6F Hellcat"
+
+ ELS_fighter_equipment_0:0 "Curtiss-Wright CW-14 Osprey"
+ ELS_fighter_equipment_0_short:0 "CW-14 Osprey"
+ ELS_fighter_equipment_1:0 "Caproni AP.1"
+ ELS_fighter_equipment_1_short:0 "AP.1"
+ ELS_tac_bomber_equipment_0:0 "Breguet 14"
+ ELS_tac_bomber_equipment_0_short:0 "Breguet 14" 
