--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -3292,14 +3292,14 @@
  URG_medium_tank_aa_equipment_2:0 "M16 Multiple Gun Motor Carriage"
  URG_medium_tank_aa_equipment_2_short:0 "M16 MGMC"
 
- URG_motorized_equipment_1:0 "Dodge WC "Beeps""
+ URG_motorized_equipment_1:0 "Ford F15A"
+ URG_motorized_equipment_1_short:0 "Ford F15A" 
  URG_mechanized_equipment_1:0 "Half-Track Car M2"
  URG_mechanized_equipment_1_short:0 "M2"
  URG_mechanized_equipment_2:0 "Half-Track Personnel Carrier M3"
  URG_mechanized_equipment_2_short:0 "HT M3"
  URG_mechanized_equipment_3:0 "Half-Track Personnel Carrier M5"
  URG_mechanized_equipment_3_short:0 "HF M5" 
- URG_motorized_equipment_1_short:0 "Dodge WC" 
  
  URG_infantry_equipment_0:0 "Ceska Zbrojovka vz. 24"
  URG_infantry_equipment_0_short:0 "vz .24"
