--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1058,10 +1058,17 @@
  VICTORY_POINTS_13279:0 "Salto" 
  VICTORY_POINTS_4457:0 "Colonia del Sacramento"
  VICTORY_POINTS_13271:0 "Melo"
- VICTORY_POINTS_13252:0 "Florida" 
+ VICTORY_POINTS_13252:0 "Florida"
+ VICTORY_POINTS_10347:0 "Rocha"
+ VICTORY_POINTS_13255:0 "Mercedes"
+ VICTORY_POINTS_13259:0 "Durazno"
+ VICTORY_POINTS_13261:0 "Treinta y Tres"
+ VICTORY_POINTS_13270:0 "Paysandú"
+ VICTORY_POINTS_13275:0 "Tacuarembó"
 
  #NUEVOS VP - ARGENTINA
  VICTORY_POINTS_13682:0 "Puerto Madryn"
+ VICTORY_POINTS_13328:0 "Concordia"
 
  #NUEVOS VP - CHILE
  VICTORY_POINTS_5121:0 "Temuco"
